--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
         crossorigin="anonymous"></script>
-<script src="script.js"></script>
+<script type="module" src="script.js"></script>
+<script type="module" src="adventureData.js"></script>
 </body>
 </html>
